# stashpad

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  llms.txt  pyproject.toml
.claude-plugin/: marketplace.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  improvement.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: README.md  agent-skills.md  cli-reference.md  configuration.md  data-model.md  devcontainer.md  development.md  getting-started.md  mcp.md
docs/learn/: 00-overview.md  00-setup.md  01-beginner.md  02-intermediate.md  03-advanced.md  04-testing.md  05-professional-patterns.md  06-click-internals.md  COMMAND_MAP.md
examples/: .gitignore  README.md
examples/data/: sample-entries.json  team-backup.json
examples/recipes/: api-workflow.md  backup-and-restore.md  daily-workflow.md
examples/scripts/: 01-getting-started.sh  02-add-dev-snippets.sh  03-search-and-filter.sh  04-import-export.sh  05-json-scripting.sh  _common.sh
plugins/stashpad/: README.md  plugin.json
plugins/stashpad/.claude-plugin/: plugin.json
plugins/stashpad/codex/: AGENTS.md
plugins/stashpad/skills/stash-backup/: SKILL.md
plugins/stashpad/skills/stash-capture/: SKILL.md
plugins/stashpad/skills/stash-mcp-setup/: SKILL.md
plugins/stashpad/skills/stash-search/: SKILL.md
plugins/stashpad/skills/stash-setup/: SKILL.md
plugins/stashpad/skills/stashpad/: SKILL.md
src/stash_cli/: __init__.py  api.py  capture.py  cli.py  clipboard.py  completions.py  config.py  constants.py  context.py  entry_actions.py  exceptions.py  kind.py  models.py  output.py  schemas.py  search_rank.py  storage.py  types.py  utils.py  validators.py
src/stash_cli/commands/: __init__.py  config_cmd.py  entry.py  export.py  import_cmd.py  init.py  open_cmd.py  pick.py  pins.py  search.py  tags.py
src/stashpad/: __init__.py  capture.py  cli.py  clipboard.py  completions.py  constants.py  context.py  duplicates.py  entry_actions.py  entry_query.py  kind.py  models.py  output.py  schemas.py  search_rank.py  storage.py  types.py  utils.py
src/stashpad/commands/: browse.py  config_cmd.py  entry.py  export.py  import_cmd.py  init.py  mcp.py  open_cmd.py  pick.py  pins.py  search.py  tags.py
src/stashpad/mcp/: __init__.py  server.py  service.py
src/stashpad/tui/: __init__.py  browse_app.py  browse_tags.py
tests/: conftest.py  test_api.py  test_browse.py  test_browse_tags.py  test_capture.py  test_cli.py  test_clipboard.py  test_config.py  test_duplicates.py  test_entry_actions.py  test_entry_query.py  test_import.py  test_import_cmd.py  test_kind.py  test_mcp_cmd.py  test_mcp_service.py  test_pick.py  test_pins.py  test_search_rank.py  test_storage.py  test_utils.py
