[build-system]  # https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]  # https://python-poetry.org/docs/pyproject/
name = "stashpad"
version = "0.6.0"
description = "Stashpad — personal developer reference manager CLI."
authors = ["Victor Barra <victor.barra@live.be>"]
readme = "README.md"
repository = "https://github.com/Vicba/stash-cli"

license = "MIT"

packages = [{ include = "stashpad", from = "src" }]

keywords = ["python", "cli", "package", "typer"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.commitizen]  # https://commitizen-tools.github.io/commitizen/config/
bump_message = "bump(release): v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "poetry"


[tool.poetry.scripts]  # https://python-poetry.org/docs/pyproject/#scripts
stash = "stashpad.cli:app"


[tool.poetry.dependencies]  # https://python-poetry.org/docs/dependency-specification/
python = ">=3.8,<3.13"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"

typer = { extras = ["all"], version = ">=0.9.0" }


poethepoet = ">=0.20.0"

mcp = { version = ">=1.26.0,<2.0.0", optional = true, python = ">=3.10,<3.13" }


[tool.poetry.extras]
mcp = ["mcp"]


[tool.poetry.group.test.dependencies]  # https://python-poetry.org/docs/master/managing-dependencies/
coverage = { extras = ["toml"], version = ">=7.2.5" }
mypy = ">=1.2.0"
pytest = ">=7.3.1"
pytest-clarity = ">=1.0.1"
pytest-mock = ">=3.10.0"
pytest-xdist = ">=3.2.1"
ruff = ">=0.2.1"
safety = ">=2.3.4,!=2.3.5"
typeguard = ">=3.0.2"

pre-commit = ">=3.3.1"
shellcheck-py = ">=0.9.0"


commitizen = ">=3.2.1"

mcp = { version = ">=1.26.0,<2.0.0", python = ">=3.10,<3.13" }


[tool.poetry.group.dev.dependencies]  # https://python-poetry.org/docs/master/managing-dependencies/
ipykernel = ">=6.29.2"
pdoc = ">=13.1.1"

[tool.coverage.report]  # https://coverage.readthedocs.io/en/latest/config.html#report
fail_under = 50
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]  # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["src"]

[tool.coverage.xml]  # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.mypy]  # https://mypy.readthedocs.io/en/latest/config_file.html
junit_xml = "reports/mypy.xml"
plugins = "pydantic.mypy"
strict = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.pydantic-mypy]  # https://pydantic-docs.helpmanual.io/mypy_plugin/#configuring-the-plugin
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]  # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --typeguard-packages=stashpad --verbosity=2 --junitxml=reports/pytest.xml"
filterwarnings = ["error", "ignore::DeprecationWarning"]
testpaths = ["src", "tests"]
xfail_strict = true

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
line-length = 100
src = ["src", "tests"]
target-version = "py38"

[tool.ruff.lint]
ignore-init-module-imports = true
select = ["A", "ASYNC", "B", "BLE", "C4", "C90", "D", "DTZ", "E", "EM", "ERA", "F", "FBT", "FLY", "FURB", "G", "I", "ICN", "INP", "INT", "ISC", "LOG", "N", "NPY", "PERF", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "Q", "RET", "RSE", "RUF", "S", "SIM", "SLF", "SLOT", "T10", "T20", "TCH", "TID", "TRY", "UP", "W", "YTT"]
ignore = ["D203", "D213", "E501", "RET504", "S101", "S307"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]

[tool.ruff.lint.per-file-ignores]
"src/stashpad/commands/**/*.py" = ["B008", "FBT001", "FBT002", "FBT003", "PLR0913", "PLR2004", "UP007", "TCH003"]
"src/stashpad/commands/import_cmd.py" = ["C901"]
"src/stashpad/cli.py" = ["B008", "FBT001", "FBT003", "UP007", "TCH003"]
"src/stashpad/context.py" = ["FBT001", "FBT002", "TCH003"]
"src/stashpad/utils.py" = ["TCH003"]
"src/stashpad/schemas.py" = ["TCH003"]
"src/stashpad/completions.py" = ["TCH002"]
"src/stashpad/commands/pick.py" = ["C901", "S603", "TRY003", "EM101", "EM102"]
"src/stashpad/commands/mcp.py" = ["B008", "FBT001", "FBT002", "FBT003", "UP007", "TCH001", "TCH003"]
"src/stashpad/mcp/server.py" = ["TCH001", "TCH002", "FBT001", "FBT002", "FBT003", "PLR0913", "SLF001"]
"src/stashpad/mcp/service.py" = ["TCH001", "PLR0913"]
"src/stashpad/clipboard.py" = ["S603", "S607"]
"src/stashpad/kind.py" = ["PLR2004"]
"src/stashpad/entry_actions.py" = ["FBT001", "TRY003", "EM101", "EM102"]
"src/stashpad/storage.py" = ["C901"]
"tests/test_mcp_cmd.py" = ["PLR2004", "D103", "SLF001"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.poe.tasks]  # https://github.com/nat-n/poethepoet

  [tool.poe.tasks.docs]
  help = "Generate this package's docs"
  cmd = """
    pdoc
      --docformat $docformat
      --output-directory $outputdirectory
      stashpad
    """

    [[tool.poe.tasks.docs.args]]
    help = "The docstring style (default: numpy)"
    name = "docformat"
    options = ["--docformat"]
    default = "numpy"

    [[tool.poe.tasks.docs.args]]
    help = "The output directory (default: docs)"
    name = "outputdirectory"
    options = ["--output-directory"]
    default = "docs"

  [tool.poe.tasks.lint]
  help = "Lint this package"

    [[tool.poe.tasks.lint.sequence]]
    shell = "safety check --continue-on-error --full-report"

    [[tool.poe.tasks.lint.sequence]]
    cmd = """
      pre-commit run
        --all-files
        --color always
      """


  [tool.poe.tasks.test]
  help = "Test this package"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage run"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage report"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage xml"

  [tool.poe.tasks.dev]
  help = "Run CLI via typer dev runner (https://typer.tiangolo.com/tutorial/typer-command/)"
  cmd = "typer stashpad.cli run"
